<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:padding="16dp"
        android:text="stat 1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:padding="16dp"
        android:text="stat 2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="0dp"
        android:text="10"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:padding="16dp"
        android:text="stat 3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:padding="16dp"
        android:text="stat 4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="days till period"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progress="50"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/weekdayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon_M"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue_T"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/wen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wen_W"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu_T"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri_F"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat_S"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun_S"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/calendar_date_text_size" />
    </LinearLayout>


    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="0dp"
        android:layout_height="354dp"
        android:layout_marginStart="16dp"
        android:numColumns="7"
        android:verticalSpacing="@dimen/calendar_date_padding_v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weekdayLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/mainGoToTesting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToTesting"
        android:text="Go to Testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="-30dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:layout_editor_absoluteX="6dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainAddPeriodFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="onAddPeriodClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@drawable/baseline_invert_colors_white_18dp"
        app:useCompatPadding="false" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@+id/weekdayLayout"
        tools:layout_editor_absoluteX="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>